--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # basic options
-title: Your awesome title
-author: GitHub User
+title: Lite av allt
+author: Jag
 email: your-email@domain.com
 description: A wonderful site
 twitter_username: jekyllrb
